--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -5,7 +5,7 @@ const navigation = [
   {
     title: 'conditions',
     items: [
-      { path: '/conditions/breaking', title: '2025 Breaking' },
+      { path: '/conditions/breaking', title: 'Breaking' },
       { path: '/conditions/reports', title: 'Trip Reports' },
       { path: '/conditions/snow', title: 'Snow & Water' },
       { path: '/conditions/fire', title: 'Fire & Smoke' },
