--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,9 +3,9 @@ import MainLayout from '../layouts/MainLayout.astro';
 ---
 
 <MainLayout title="404 - Page Not Found">
-  <div class="text-center" style="padding: 4rem 0;">
+  <div>
     <h1>404 - Page Not Found</h1>
-    <p style="font-size: 1.25rem; margin: 2rem 0;">
+    <p>
       Sorry, the page you're looking for doesn't exist.
     </p>
     <p>
