--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ import ThemeToggle from './ThemeToggle.astro';
 
     <a href="/" class="header-logo">
       <Logo />
-      <span>Sierra Conditions Reports</span>
+      <span>Sierra Nevada Conditions Reports</span>
     </a>
   </div>
 
